themes/skins/niecalumni.css
/* ... */
/* ------------------- !MOBILE ----------------------- */
@media only screen and (max-device-width: 600px), only screen and (device-width: 600px) and (device-height: 600px), only screen and (width: 600px) and (orientation: landscape), only screen and (device-width: 600px), only screen and (max-width: 600px) {
.like_btn img{
    width: 16px;
    height: 16px;
}
.logo {
display: none;
}
.logo-small {
display: block;
}
.row-body .two {
width: 100%;
}
.row-body .ten {
width: 100%;
}
.row-body .twenty {
width: 100%;
}
.row .three {
    width: 100%;
}
.row-body .threeads {
    width: 100%;
}
.row-body .threeads img {
    width: auto;
    height: auto;
}
.row-body .nine {
    width: 100%;
}
.row-body .three {
    width: 100%;
}
.row .four {
    width: 100%;
}
.row .eight {
    width: 100%;
}
.row .six { 
    width: 50%; 
}
.row .seven {
    width: 100%;
}
.row-page .three {
width: 100%;
}
.row-page .nine {
width: 100%;
}
.body {
border:0;
}
.footer-container a {
padding: 0 0 5px 0 !important;
width: 100%;
}
.inputs-container {
padding: 30px 10px 30px 20px;
}
.row-body .five {
width: 100%;
}
.row-one {
float: left;
width: 100%;
padding: 3px 0;
}
.row-two {
float: left;
width: 100%;
padding: 3px 0;
}
.row-three {
float: left;
width: 100%;
padding: 3px 0;
text-align: left;
}
.row-four {
float: left;
width: 100%;
padding: 3px 0;
text-align: left;
}
.menu_name {
display: none;
}
.message-container {
padding: 0 10px 10px 10px;
}
.cover-container {
height: auto;
}
.cover-username {
font-size: 15px;
margin: 0 0 5px 0;
}
.cover-username img {
width: 14px;
height: 14px;
margin: 0 0 -2px 4px;
}
.cover-description-buttons {
float: right;
overflow: auto;
display: block;
width: 65px;
}
.sidebar-container {
padding: 10px;
}
#values {
width: 230px;
}
.page-input-title {
width: 100%;
text-align: left;
padding: 3px 0;
}
.page-input-sub {
padding: 3px 0;
width: 100%;
min-width: 100%;
}
.page-input-content {
width: 90%;
}
.page-settings-container {
padding: 10px;
}
.row-page .stats-container {
width: 100%;
}
.admin-rows { border-bottom: 1px solid #ccc; }
.row-page .table-id, .row-page .table-user, .row-page .table-mail, .row-page .table-edit, .row-page .table-delete { width: 100%; }
.row-page .table-report-id, .row-page .table-report-type, .row-page .table-user, .row-page .table-report-message, .row-page .table-report-safe { width: 100%; }
.subslist {
right: 20px;
}
.subslist_message {
right: 53px;
}
.notification-container {
position: static !important; /* Overrides the JS */
}
.notification-content {
margin: 1px -1px 0 0;
}
.search-input input {
width: 90px;
}
.menu {
display: none;
}
.search-results {
}
.chat-container  {
height: 300px;
}
.sidebar-chat-list {
max-height: 350px;
}
.cover-description-content {
margin-left: 106px;
}
.cover-avatar {
width: 86px;
margin-top: -50px;
}
.cover-avatar a {
float: left;
overflow: hidden;
height: 86px;
}
.welcome-message {
width: 100%;
display: none;
}
.welcome-inputs {
width: 100%;
}


.welcome-user {
margin-top: 0;
margin-bottom: 11px;
}
.welcome-user:last-child {
display: none;
}

.menu_name {

text-indent: -99999px;
width: 0px;
}


.message-content{
    border: none;
    box-shadow: 0 0 1px rgba(0, 0, 0, .25), 0 1px 5px 3px rgba(0, 0, 0, .05), 0 5px 4px -3px rgba(0, 0, 0, .06);
    -moz-box-shadow: 0 0 1px rgba(0, 0, 0, .25), 0 1px 5px 3px rgba(0, 0, 0, .05), 0 5px 4px -3px rgba(0, 0, 0, .06);
    -webkit-box-shadow: 0 0 1px rgba(0, 0, 0, .25), 0 1px 5px 3px rgba(0, 0, 0, .05), 0 5px 4px -3px rgba(0, 0, 0, .06);
}

.message-reply-message {
margin: 0px 30px 5px 45px;
word-wrap: break-word;
padding: 5px 20px;
background: #fff;
border-radius: 3px;
box-shadow: 0px 1px 1px #CCC;
border-bottom: none;
}

.message-reply-author a {
color:#3ac162;
cursor: pointer;
font-weight: bold;
font-family: Tahoma, Arial, 'Segoe UI', Verdana, sans-serif;
}

.message-reply-message:before{
    content: "";
    position: absolute;
    width: 0;
    height: 0;
    top: 18px;
    bottom: 0;
    left: 35px;
    border-left: 10px solid transparent;
    border-right: 10px solid #fff;
    border-top: 10px solid transparent;
    border-bottom: 10px solid transparent;
    background: url(images/talk.png);
    background-position: right;
    background-repeat: no-repeat;
}

.right{
float: none;
}

.left{
float: none;
border-right: none;
padding-right: 0px;
}


}


@media only screen and (max-device-width: 240px), only screen and (device-width: 240px) and (device-height: 240px), only screen and (width: 240px) and (orientation: landscape), only screen and (device-width: 240px), only screen and (max-width: 240px) {
.like_btn img{
    width: 16px;
    height: 16px;
}

.menu_btn {
        padding: 0 0px;
        float: right;
        height: 45px;
    }

.search-input input {
        width: 55px;
    }

.right{
float: none;
}

.left{
float: none;
border-right: none;
padding-right: 0px;
}

}




/*       Appended Css            */

.welcomeforms {

font-family: 'Segoe UI', Tahoma, Verdana, Arial, sans-serif;
color: #6B6B6B;
max-width: 275px;
margin: 0 auto;
}

.verify{
    max-width: 400px;
}

.loginpass{
width: 100%;
float: left;
margin-right: 5px;
}

#simple-menu{
position: fixed;
z-index: 1002;
left: 0px;
top: 0px;
/*border-radius: 3px;*/
width: 57px;
height: 66px;
text-indent: -9999px;
background:#384047 url(images/menu.png);
background-repeat: no-repeat;
background-position: center;
}
#simple-menu:hover{
background-color: #384047;
}
#sidr{
overflow: hidden;
position: fixed;
background: #384047;
z-index: 1001;
height:100%;
left: 0;
padding-top: 67px;
}
#sidr ul{
margin: 0;
padding: 0;
display: block;
}

.expander{
color: #666;
width: 32px;
height: 32px;
display: block;
text-indent: -9999px;
background-repeat: no-repeat;
padding: 5px;
border-radius: 3px;
background-image: url(images/expander.png);
background-position: 7px 5px;
position: absolute;
bottom: 70px;
margin-left: 7px;
cursor: pointer;
}
/* ... */

